--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,8 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/apel-ste-anne",
+            "index": "src/index.html",
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
@@ -27,7 +29,8 @@
             "styles": [
               "src/styles.css"
             ]
-          },
+          }
+        ,
           "configurations": {
             "production": {
               "budgets": [
