--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@tinymce/tinymce-angular": "^9.1.1",
+    "angularx-flatpickr": "^8.1.0",
     "bootstrap": "^5.3.8",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^11.10.0",
     "rxjs": "~7.8.1",
-    "tslib": "^2.6.2",
-    "zone.js": "^0.16.0"
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@angular/build": "^19.2.0",
-    "@angular/cli": "^19.2.0",
+    "@angular/cli": "^21.1.1",
     "@angular/compiler-cli": "^19.2.0",
     "jsdom": "^24.0.0",
     "typescript": "~5.8.3",
-    "vitest": "^1.6.0"
+    "vitest": "^4.0.18"
   }
 }
