--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@angular/animations": "^19.2.0",
@@ -29,11 +32,15 @@
     "tslib": "^2.6.2"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^19.0.1",
     "@angular/build": "^19.2.0",
     "@angular/cli": "^21.1.1",
     "@angular/compiler-cli": "^19.2.0",
-    "jsdom": "^24.0.0",
-    "typescript": "~5.8.3",
-    "vitest": "^4.0.18"
+    "@cypress/schematic": "^4.3.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.5.4",
+    "jsdom": "^24.1.3",
+    "typescript": "~5.8.3"
   }
 }
