--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "e2e": "ng e2e",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "lint": "ng lint"
   },
   "dependencies": {
     "@angular/animations": "^19.2.0",
@@ -38,9 +36,12 @@
     "@angular/compiler-cli": "^19.2.0",
     "@cypress/schematic": "^4.3.0",
     "@types/jest": "^29.5.14",
+    "angular-eslint": "21.1.0",
+    "eslint": "^9.39.1",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.5.4",
     "jsdom": "^24.1.3",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "8.47.0"
   }
 }
