--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "packageManager": "npm@11.6.2",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "eslint \"src/**/*.{ts,html}\""
   },
+
   "dependencies": {
     "@angular/animations": "^19.2.0",
     "@angular/common": "^19.2.0",
@@ -44,4 +46,5 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "8.47.0"
   }
+
 }
